# xxlog

./: .gitignore  CMakeLists.txt  CMakePresets.json
example/: main.cpp
include/: logger.h
src/: logger.cpp
tests/: xxlog_test.cpp
